---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Use the og sprites
    - Color the water black
    - Give deepwater the same black texture treatment
    - use our own entity and item
    - Render them on the surface layer
    - Attempt 1 at drawing the planet upright
    - Attempt 2 at drawing the planet upright
    - Starmap icon
    - Fix stray transparent pixels in common body
    - Space connections and icon extravaganza
    - Experiment with changing where the goo balls look on the fly
    - More lifelike goo ball movement
    - World of goo is smol
    - Human facing information
    - Mimic fulgora worldgen
    - Move the goo balls to their designated planet
    - There are no cliffs in ba sing se
    - Use green variants of fulgora tiles
    - Greenify the map colors of those tiles
    - Prevent cliffs from showing under "contains"
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 07. 03
  Info:
    - Initial commit