@@ -2,6 +2,7 @@ require("namespace")
 
 require("prototypes.planet")
 require("prototypes.tiles")
+require("prototypes.entities")
 
 local sounds = require("__base__.prototypes.entity.sounds")
 local item_sounds = require("__base__.prototypes.item_sounds")
